--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "core-js": "^3.15.1",
+    "graphql-tag": "^2.12.5",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
   },
