--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "core-js": "^3.15.1",
     "graphql-tag": "^2.12.5",
     "nuxt": "^2.15.7",
+    "nuxt-property-decorator": "^2.9.1",
+    "vue-apollo": "^3.0.8",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
